# wayland-examples

./: meson.build
01-wl-shell/: wl-shell.cpp
02-xdg-shell-unstable/: xdg-shell-unstable.cpp
03-xdg-shell-stable/: xdg-shell-stable.cpp
